--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
+    "@shopify/app-bridge": "^3.7.11",
+    "@shopify/app-bridge-react": "^4.2.8",
     "@shopify/polaris": "^13.9.5",
     "formik": "^2.4.9",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.0",
+    "react-router-dom": "^7.10.1",
     "yup": "^1.7.1"
   }
 }
